# FPH

Chapter-01/collatz/: LICENSE  collatz.cabal
Chapter-01/collatz/lib/: Collatz.hs
Chapter-08/maze/: README  maze.cabal  maze.txt  moby-dick.txt
Chapter-08/maze/app/: Frequencies.hs  Histogram.hs  Solver.hs
