cabal-version:      3.4
name:               collatz
version:            0.1.0.0

license:            BSD-3-Clause
license-file:       LICENSE
author:             Stuart A. Kurtz
maintainer:         stuart@cs.uchicago.edu
build-type:         Simple

common standard
    ghc-options:      -Wall
    build-depends:    base
    default-language: Haskell2010
    other-extensions: Safe

library
    import:           standard
    exposed-modules:  Collatz
    hs-source-dirs:   lib
